<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Voting">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <ImageView
            android:id="@+id/btn.back_nav"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_lists"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            />

    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        >
        <RadioButton
            android:id="@+id/candidate_1"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:text="@string/candidate_1"
            android:enabled="true"/>
        <RadioButton
            android:id="@+id/candidate_2"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/candidate_2"
            android:layout_height="match_parent"
            android:enabled="true"/>
        <RadioButton
            android:id="@+id/candidate_3"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/candidate_3"
            android:layout_height="match_parent"
            android:enabled="true"/>
        <RadioButton
            android:id="@+id/candidate_4"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/candidate_4"
            android:layout_height="match_parent"
            android:enabled="true"/>


    </RadioGroup>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/submit_bg"
        app:layout_constraintStart_toStartOf="@id/radio_group"
        app:layout_constraintEnd_toEndOf="@id/radio_group"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        />

</androidx.constraintlayout.widget.ConstraintLayout>