<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".VotingResults">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        >
        <ImageView
            android:id="@+id/back.btn_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_back"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voting_results"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            />

    </androidx.appcompat.widget.Toolbar>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="150dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    >
    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidate_1_res"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/res_1"
        />
    <TextView
        android:id="@+id/res_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/tv_1"
        app:layout_constraintTop_toTopOf="@id/tv_1"
        app:layout_constraintBottom_toBottomOf="@id/tv_1"
        />
    <TextView
        android:id="@+id/vote_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/votes"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/res_1"
        app:layout_constraintTop_toTopOf="@id/res_1"
        app:layout_constraintBottom_toBottomOf="@id/res_1"
        />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/candidate_2_res"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_1"
        app:layout_constraintEnd_toStartOf="@id/res_1"
        />
    <TextView
        android:id="@+id/res_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/tv_2"
        app:layout_constraintTop_toTopOf="@id/tv_2"
        app:layout_constraintBottom_toBottomOf="@id/tv_2"
        />
    <TextView
        android:id="@+id/vote_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/votes"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/res_2"
        app:layout_constraintTop_toTopOf="@id/res_2"
        app:layout_constraintBottom_toBottomOf="@id/res_2"
        />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/candidate_3_res"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_2"
        app:layout_constraintEnd_toStartOf="@id/res_2"
        />
    <TextView
        android:id="@+id/res_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/tv_3"
        app:layout_constraintTop_toTopOf="@id/tv_3"
        app:layout_constraintBottom_toBottomOf="@id/tv_3"
        />
    <TextView
        android:id="@+id/vote_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/votes"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/res_3"
        app:layout_constraintTop_toTopOf="@id/res_3"
        app:layout_constraintBottom_toBottomOf="@id/res_3"
        />

<TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/candidate_4_res"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_3"
        app:layout_constraintEnd_toStartOf="@id/res_3"
        />
    <TextView
        android:id="@+id/res_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/_1"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/tv_4"
        app:layout_constraintTop_toTopOf="@id/tv_4"
        app:layout_constraintBottom_toBottomOf="@id/tv_4"
        />
    <TextView
        android:id="@+id/vote_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/votes"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@id/res_4"
        app:layout_constraintTop_toTopOf="@id/res_4"
        app:layout_constraintBottom_toBottomOf="@id/res_4"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>