<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Register">
<androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"

    >
    <ImageView
        android:id="@+id/btn.back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_back"
        android:layout_gravity="left"
        android:layout_marginStart="30dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_gravity="center"
        />

</androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/username"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="#9C27B0"
        app:hintTextColor="#9C27B0"
        android:textColorHint="#9C8787"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt.username_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="35dp"
        android:hint="Password"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="#9C27B0"
        app:hintTextColor="#9C27B0"
        android:textColorHint="#9C8787"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt.password_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="text"
            android:textSize="20sp"
            />


    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="35dp"
        android:hint="Email Id"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="#9C27B0"
        app:hintTextColor="#9C27B0"
        android:textColorHint="#9C8787"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt.email_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="35dp"
        android:hint="Phone Number"
        android:elevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeColor="#9C27B0"
        app:hintTextColor="#9C27B0"
        android:textColorHint="#9C8787"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt.phone_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:inputType="text"
            android:textSize="20sp"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/submit_bg"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/phone"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_1"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/submit_bg"
        app:layout_constraintEnd_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/phone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>